# platform-plugin-lti-launch-monitor

./: .coveragerc  .gitignore  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  catalog-info.yaml  pyproject.toml  setup.cfg  setup.py  test_settings.py  tox.ini
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst  make.bat  testing.rst
lti_launch_monitor/: apps.py  models.py  signal_handlers.py  urls.py
lti_launch_monitor/migrations/: 0001_initial.py  0002_remove_ltilaunchrecord_modified_and_more.py
platform_plugin_lti_launch_monitor/: apps.py  models.py  urls.py
requirements/: base.in  base.txt  ci.txt  dev.in  dev.txt  doc.txt  quality.txt  test.txt
tests/: test_models.py  test_signals.py
